# ssgen

./: .gitignore  .gitlab-ci.yml  .rustfmt.toml  Cargo.toml  README.md  build.sh  test.sh
examples/full/: META.yaml  head.block  index.page  script.js  style.css
examples/full/assets/: script.js  style.css
examples/full/blocks/: head.block  named-code.block  named_code.block
examples/full/content/: advanced.block  basics.block  conditionals.block  foreach.block  include.block  special-files.block  strings.block  tag-metadata.block  title.block  variables-and-def.block  why.block
examples/full/features/: basics.block  tag-metadata.block  variables.block
examples/simple/: index.page
src/: main.rs  pagenode.rs  parser.rs
src/args/: mod.rs  progressdrain.rs
src/parser/: directives.rs  mod.rs
