[package]
name = "ssgen"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive", "color", "suggestions", "unicode"] }
colored = "2.1"
indicatif = "0.17"
log = "0.4"
serde_yaml = "0.9"
slog = "2.7"
slog-async = "2.8"

[profile.release]
opt-level = 3
strip = true
debug = false
pacic = "abort"
lto = true
